--- a/sirius_migration-main/templates/registration.html
+++ b/sirius_migration-main/templates/registration.html
@@ -13,9 +13,11 @@
     <div class="flash">{{msg}}</div>
     {% endfor %}
     <form action="" method="post">
-	    <input type="text" name="username" class="fw-bold border-black bg-white" size="30" width="500">
+	    <input type="text" name="email" class="fw-bold border-black bg-white" size="30" width="500">
      <br>
-	    <input type="text" name="password" class="fw-bold border-black bg-white" size="30">
+	    <input type="password" name="psw" class="fw-bold border-black bg-white" size="30">
+     <br>
+        <input type="password" name="psw2" class="fw-bold border-black bg-white" size="30">
      <br>
 	    <input type="submit" name="Принять" class="fw-bold border-black bg-white">
     </form>
