--- a/sirius_migration-main/templates/index.html
+++ b/sirius_migration-main/templates/index.html
@@ -14,9 +14,9 @@
     <br>
     <center><a href="#" class="btn btn-lg btn-secondary fw-bold border-black bg-black">К карте!</a></center>
     <br>
-    <center><a href="auth" class="btn btn-lg btn-secondary fw-bold border-black bg-black">Авторизация!</a></center>
+    <center><a href="/login" class="btn btn-lg btn-secondary fw-bold border-black bg-black">Авторизация!</a></center>
     <br>
-    <center><a href="registration" class="btn btn-lg btn-secondary fw-bold border-black bg-black">Регистрация!</a></center>
+    <center><a href="/registration" class="btn btn-lg btn-secondary fw-bold border-black bg-black">Регистрация!</a></center>
 
 </main>
 {% endblock %}
