--- a/sirius_migration-main/templates/about.html
+++ b/sirius_migration-main/templates/about.html
@@ -7,5 +7,11 @@
 <center><h2>О разработчиках</h2></center>
 <br>
 <br>
-    <h4>Пока что тут ничего нет.</h4>
+    <h4>Ратмир - гей. Он никогда не приходит на собеседование.</h4>
+    <h4>Арсений - молодец. Он всегда приходит на собеседование.</h4>
+    <h4>Илья - тоже молодец. Он всегда приходит на собеседование.</h4>
+    <h4>Михаил - гей. Он променял команду на девушку.</h4>
+    <img src="https://sun9-2.userapi.com/impg/Nd30q6NbDR7cNz-ugocsFqtG9_TQ6_9ldz_mVg/U36jKYavRx8.jpg?size=1620x2160&quality=95&sign=1c5216c7a4a683187b2df115500b055f&type=album" style="width: 300px">
+    <h4>Саня - RIP. Он RIP.</h4>
+
 {% endblock %}
