--- a/sirius_migration-main/templates/index.html
+++ b/sirius_migration-main/templates/index.html
@@ -12,7 +12,7 @@
     <p class="lead">
         <br>
     <br>
-    <center><a href="#" class="btn btn-lg btn-secondary fw-bold border-black bg-black">К карте!</a></center>
+    <center><a href="/map" class="btn btn-lg btn-secondary fw-bold border-black bg-black">К карте!</a></center>
     <br>
     <center><a href="/login" class="btn btn-lg btn-secondary fw-bold border-black bg-black">Авторизация!</a></center>
     <br>
