--- a/sirius_migration-main/templates/user.html
+++ b/sirius_migration-main/templates/user.html
@@ -7,7 +7,7 @@
 {% block body %}
 <center>
 <main class="container px-3">
-    <h3> Cтраница пользователя {{ email }} - password:{{ psw }} </h3>
+    <h3> Cтраница пользователся {{ name }} - id:{{ id }} </h3>
 
 </main>
     </center>
